--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ name: CI-CD 2nd project
 
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request: 
-    branches: [master]
+    branches: [main]
     
 jobs:
   build:
