--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,19 @@ jobs:
     
     steps:
     - uses: actions/checkout@v2
+
+    - name: Setup python 3.5 
+      with:
+        python-verison: 3.5
     
     - name: Run make command
       run: make hello
-    - name: Run echo command
-      run: echo "Test for setup"
+
+    - name: Install dependencies
+      run: make install
+    
+    - name: Lint with pylint
+      run: make lint
+
+    - name: Test with pytest
+      run: make test
