--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup python 3.5 
-    - uses: actions/setup-python@v1
+      uses: actions/setup-python@v1
       with:
         python-verison: 3.5
     
